
  OPTIMIZATIONS

  BUG FIXES

    YARN-1053. Diagnostic message from ContainerExitEvent is ignored in
    ContainerImpl (Omkar Vinit Joshi via jlowe)

    YARN-1145. Fixed a potential file-handle leak in the web interface for
    displaying aggregated logs. (Rohith Sharma via jlowe)

    YARN-1180. Update capacity scheduler docs to include types on the configs
    (Chen He via jeagles)

Release 0.23.10 - 2013-12-09

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    YARN-985. Nodemanager should log where a resource was localized (Ravi
    Prakash via jeagles)

    YARN-707. Add user info in the YARN ClientToken (jlowe)

    YARN-1119. Add ClusterMetrics checks to tho TestRMNodeTransitions tests
    (Mit Desai via jeagles)

  OPTIMIZATIONS

  BUG FIXES

    YARN-949. Failed log aggregation can leave a file open. (Kihwal Lee via
    jlowe)

    YARN-1036. Distributed Cache gives inconsistent result if cache files get
    deleted from task tracker (Mayank Bansal and Ravi Prakash via jlowe)

    YARN-543. Shared data structures in Public Localizer and Private
    Localizer are not Thread safe. (Omkar Vinit Joshi and Mit Desai via jlowe)

    YARN-337. RM handles killed application tracking URL poorly (jlowe)

    YARN-1101. Active nodes can be decremented below 0 (Robert Parker
    via tgraves)

    YARN-1176. RM web services ClusterMetricsInfo total nodes doesn't include
    unhealthy nodes (Jonathan Eagles via tgraves)

    YARN-1243. ResourceManager: Error in handling event type NODE_UPDATE to the
    scheduler - NPE at SchedulerApp.java:411 (Jason Lowe via jeagles)

    YARN-155. TestAppManager intermittently fails with jdk7 (Thomas Graves via
    jlowe)

    YARN-1031. JQuery UI components reference external css in branch-23
    (Jonathan Eagles and Jason Lowe via jlowe)

    YARN-1386. NodeManager mistakenly loses resources and relocalizes them
    (Jason Lowe via jeagles)

    YARN-1419. TestFifoScheduler.testAppAttemptMetrics fails intermittently