@@ -21,6 +21,9 @@ Release 0.23.11 - UNRELEASED
     YARN-1180. Update capacity scheduler docs to include types on the configs
     (Chen He via jeagles)
 
+    YARN-1592. CapacityScheduler tries to reserve more than a node's total
+    memory on branch-0.23 (Omkar Vinit Joshi and Thomas Graves via jlowe)
+
 Release 0.23.10 - 2013-12-09
 
   INCOMPATIBLE CHANGES
